<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Minesweeper</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="high_scores">High Scores</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="title_activity_rules">Minesweeper - Rules</string>
    <string name="title_activity_minesweeper">Minesweeper - Menu</string>
    <string name="rules_content">The rules in Minesweeper are simple: \n\n
- Uncover a mine, and the game ends.\n\n
- Uncover an empty square, and you keep playing.\n\n
- Uncover a number, and it tells you how many mines lay hidden in the eight surrounding squares—information you use to deduce which nearby squares are safe to click.\n\n</string>
    <string name="difficulty_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="title_activity_game">Minesweeper - Game </string>
    <string name="title_activity_high_scores">Minesweeper - High Scores</string>
    <string name="no_high_scores">There isn\'t any High Scores. Go play, dammit !</string>
    <string name="restart">Restart</string>
    <string name="username">Enter your username</string>
</resources>
