<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Minesweeper$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button android:id="@+id/new_game_button"
            android:onClick="displayDifficultyDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"/>

        <Button android:id="@+id/continue_game_button"
            android:onClick="continueGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_game"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"/>

        <Button android:id="@+id/high_scores_button"
            android:onClick="displayHighScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"/>

        <Button android:id="@+id/rules_button"
            android:onClick="displayRules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"/>

        <Button android:id="@+id/exit_button"
            android:onClick="exitApplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>
